# Graph-library-in-Haskell

./: GUI.hs  Graph.hs  Render.hs  graph-library.cabal  index.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.7/: graph-library-0.1.0.0-inplace.conf  package.cache
