name:                graph-library
version:             0.1.0.0
synopsis:            A simple graph library in Haskell
description:         Please see README.md
homepage:            https://github.com/jery04/Graph-library-in-Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Alex
maintainer:          alex@example.com
copyright:           2025 Alex
category:            Library
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Graph
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable gui
  main-is:             GUI.hs
  build-depends:       base >= 4.7 && < 5
                     , threepenny-gui >= 0.9 && < 0.10
                     , containers
                     , random
  default-language:    Haskell2010
